fixed selection of invisible clipboard items, re #10670
git-svn-id: svn://develop.studip.de/studip/trunk@57819 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/resources/assets/stylesheets/less/files.less
+++ b/resources/assets/stylesheets/less/files.less
@@ -190,6 +190,10 @@ table.documents {
             flex-grow: 1;
         }
     }
+
+    .studip-checkbox {
+        display: none;
+    }
 }
 
 
