--- a/resources/assets/stylesheets/less/forms.less
+++ b/resources/assets/stylesheets/less/forms.less
@@ -461,7 +461,9 @@ form.narrow {
 
 .studip-checkbox {
     opacity: 0;
-    position: absolute;
+    margin-right: -1.4em;
+    vertical-align: middle;
+
     + label {
         .icon('before', 'checkbox-unchecked', 'clickable', 16, 5px);
         cursor: pointer;
@@ -483,6 +485,7 @@ form.narrow {
         }
     }
 }
+
 
 // give forms some optimized styling for very narrow screen sizes
 .media-breakpoint-tiny-down({
